Fix margin-right issue for fixed navbar elements
Added a fixed class to handle margin-right reset when the navbar is fixed. This ensures consistent alignment and prevents layout shifting.

--- a/frontend-next-migration/src/widgets/Navbar/ui/NavbarDesktopV2/NavbarDesktopV2.module.scss
+++ b/frontend-next-migration/src/widgets/Navbar/ui/NavbarDesktopV2/NavbarDesktopV2.module.scss
@@ -138,6 +138,9 @@
   margin-right: 50px;
   .FixButton{
   }
+  &.fixed{
+    margin-right: unset;
+  }
 }
 
 .CollapseButtonWrapper {
@@ -149,14 +152,10 @@
   .CollapseButton{
     cursor: pointer;
   }
-
   &.collapsing{
     .CollapseButton{
       pointer-events: none;
       opacity: 0.5;
     }
-
   }
-
-
 }
